syntax = "proto3";

package rest;

option go_package ="github.com/pydio/cells/common/proto/rest";

import "cells-service.proto";
import "cells-tree.proto";

// A template node is representing a file or a folder
message TemplateNode {
    // Whether it's a file or a folder
    bool IsFile = 1;
    // If stored in binary store, the binary Uuid
    string BinaryUUUID = 2;
    // If it's embedded in binary
    string EmbedPath = 3;
    // One or more children
    repeated TemplateNode Children = 4;
}

// A template can be used to create files or tree from scratch
message Template {
    // Unique identifier for this template
    string UUID = 1;
    // Human friendly label
    string Label = 2;
    // Template node, can be a file or a tree of folders
    TemplateNode Node = 3;

    // Associated policies
    repeated service.ResourcePolicy Policies = 4;
}

message ListTemplatesRequest {

}

message ListTemplatesResponse {
    repeated Template Templates = 1;
}

message CreateFromTemplateRequest {
    string TemplateUUID = 1;
    tree.Node TargetNode = 2;
}

message CreateFromTemplateResponse {
    bool Success = 1;
    tree.Node Node = 2;
}